# SureSign

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Code_of_Conduct.md  README.md  SECURITY.md  SUPPORT.md  server.crt  server.key  server.pem  server.pfx
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml  checksums.yml  quality.yml  release.yml
japanese/: CONTRIBUTING_ja.md  README.md  SECURITY_ja.md  SUPPORT_ja.md
locales/: en.json  ja.json
scripts/: generate-release-notes.py
src/: cert.rs  cli.rs  config.rs  i18n.rs  interactive.rs  main.rs
