[package]
name = "SureSign"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rcgen = "0.13"
p12 = "0.6"
anyhow = "1.0"
inquire = "0.7"
sys-locale = "0.3"
console = "0.15"
time = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
